# QuickUVM

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .verible-lint.rules  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: action_plan.md  alert_array_assessment.md  alert_handler_assessment.md  axi_epic_assessment.md  code_preservation.md  comparison.md  comparison_opentitan.md  count_array_assessment.md  defaults.md  es_adaptp_assessment.md  hybrid_agent_assessment.md  maturity_assessment_rv_timer.md  parity_roadmap.md  reactive_agent_investigation.md  reference_model_seam.md  reproduce_campaign.md  reproduce_campaign_results.md  schema_philosophy_audit.md  style_python.md  style_systemverilog.md  style_templates.md  t1_hmac_assessment.md  t2_spi_host_assessment.md  t3_tl_agent_assessment.md  t4_caliptra_sha512_assessment.md  t5_ibex_cosim_assessment.md  t6_axi_outstanding_assessment.md  whitebox_observation_investigation.md
docs/t3_stage0_probe/: REPRODUCE.md  tb_a.f  tb_a.sv  tb_b.f  tb_b.sv  vip.yaml
docs/t4_sha512_probe/: REPRODUCE.md  predictor_paste.sv  sha512.yaml
docs/t5_cosim_probe/: REPRODUCE.md  cosim.yaml  cosim_dpi.c  cosim_dpi_pkg.sv  predictor_paste.sv
docs/t6_axi_probe/: REPRODUCE.md  axi_read.sv  axi_read.yaml  responder_seams.sv
examples/ahb_regs/: MUTATIONS.md  README.md  ahb_regs.yaml
examples/alert_array/: MUTATIONS.md  README.md  alert_array.yaml
examples/alu/: README.md  alu.yaml
examples/axi_read/: MUTATIONS.md  (+2 more)
quick_uvm/: __init__.py  cli.py  generator.py  merger.py  models.py  svcheck.py
scripts/: xrun_gate.sh
tests/: test_agent_reset.py  test_analysis_fabric.py  test_assertions.py  test_auto_virtual_sequences.py  test_boundary_agents.py  test_checking_scales_with_stimulus.py  test_combinational.py  test_config_objects.py  test_count_array.py  test_coverage_model.py  test_dut_interface.py  test_example_byte_identity.py  test_external_reset.py  test_generator.py  test_hybrid_agent.py  test_inouts.py  test_manifest.py  test_merger.py  test_merger_dataloss.py  test_multi_instance.py  test_multiclock.py  test_no_type_shadowing.py  test_packaging.py  test_packed_fields.py  test_parameterization.py  test_probes.py  test_reactive_agent.py  test_reference_model.py  test_register_model.py  test_regress.py  test_replicas_array.py  test_rich_stimulus.py  test_sampled_clock.py  test_schema_key_layer.py  test_sequence_library.py  test_silent_misgen_walls.py  test_subenvs.py  test_template_markers.py  test_top_name.py  test_typed_fields.py  (+6 more)
(+376 files in other folders)
